- Adicionando funcionalidade de entregadores - Adicionando funcionalidade de upload de arquivos

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /node_modules
 .vscode
 package-lock.json
+
+# exclude everything on uploads folder
+tmp/uploads/*
+
+# exception to the rule, to keep the folder on the repository
+!tmp/uploads/.gitkeep
